Import retro TV styles into main CSS

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 
 /* Import retro theme styles */
 @import './styles/retro-theme.css';
+@import './styles/retro-tv.css';
 
 /* Definition of the design system. All colors, gradients, fonts, etc should be defined here. 
 All colors MUST be HSL.
